# WinPeek

./: .gitignore  Cargo.toml  LICENSE  README.md  Resource.rc  Resource.rs  Resource2.rs
mpeg_encoder/: Cargo.toml
mpeg_encoder/.cargo/: config.toml
mpeg_encoder/src/: lib.rs
src/: build.rs  capture.rs  main.rs  util.rs
