[package]
name = "WinPeek"
version = "0.1.0"
authors = ["mcyoloswagham <dynapate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "wingdi", "uxtheme", "dwmapi", "windowsx"] }
