[package]
name = "WinPeek"
version = "0.1.0"
authors = ["mcyoloswagham <dynapate@gmail.com>"]
edition = "2018"
build = "src\\build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
winres = "0.1"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["commctrl", "libloaderapi", "winuser", "windef", "wingdi", "uxtheme", "dwmapi", "windowsx"] }
once_cell = "1.4.1"
captrs = "0.2.3"
wfd = "0.1.4"
scrap = "0.5"
mpeg_encoder = { path = "mpeg_encoder" }
